Fix css alignment for footer and spot listing

--- a/frontend/src/components/spots/SpotIndex.css
+++ b/frontend/src/components/spots/SpotIndex.css
@@ -2,7 +2,7 @@
   font-size: 40px;
   display: flex;
   justify-content: center;
-  margin-top: 110px;
+  margin-top: 60px;
   font-weight: 500;
 }
 
@@ -23,15 +23,9 @@
 
 .spot-index {
   margin-top: 40px;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 320px);
   justify-content: space-between;
-  overflow: hidden;
-}
-
-.spot-index:after {
-  content: '';
-  flex: auto;
 }
 
 .spot-detail {
